# cookAgent

./: .env  .env copy  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: langgraph-workflow.md  鍚姩鎸囧崡.md  鏈」鐩暱鐭湡璁板繂瀹炵幇璇存槑.md
gustobot/application/agents/: lg_builder.py  lg_models.py  lg_states.py
gustobot/application/agents/kg_generator/: batch_manager.py  config.json  recipe_ai_agent.py  run_ai_agent.py  visualize_schema.py
gustobot/application/agents/rag_sub_graph/: __init__.py  rag_builder.py  rag_nodes.py  rag_states.py  tools_list.py
gustobot/application/agents/text2sql_sub_graph/: __init__.py  builder.py  models.py  states.py  utils.py
gustobot/application/agents/utils/: llm_factory.py  memory_manager.py  neo4j_connect.py
gustobot/application/prompts/: lg_prompts.py
gustobot/application/services/: chat_service.py  knowledge_service.py  session_service.py
gustobot/config/: settings.py
gustobot/data/: insert_sample_data.sql  migrate_kg_to_mysql.py
gustobot/data/kg_output/: concepts.csv  nodes.csv  progress.json  relationships.csv
gustobot/data/kg_output/batch_000/: concepts.csv  relationships.csv
gustobot/data/kg_output/batch_001/: concepts.csv  relationships.csv
gustobot/data/kg_output/batch_002/: concepts.csv  relationships.csv
gustobot/data/kg_output/batch_003/: concepts.csv  relationships.csv
gustobot/data/neo4j/: graph_schema.md
gustobot/domain/models/: schemas.py
gustobot/infrastructure/core/: context_manager.py  logger.py  reranker.py
gustobot/infrastructure/persistence/: rebuild_milvus_index.py
gustobot/interfaces/http/: chat.py  exceptions.py  knowledge.py  router.py  sessions.py  upload.py
static/: index.html
tests/: run_test4_5.py  test_benchmark.py  娴嬭瘯璇存槑鏂囨。.md
(+100 files in other folders)
