[project]
name = "gustobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic==0.18.1",
    "bcrypt==4.1.2",
    "beautifulsoup4==4.12.3",
    "black==24.1.1",
    "colorama>=0.4.6",
    "dataclasses==0.6",
    "email-validator>=2.0.0",
    "fake-useragent==1.4.0",
    "fastapi==0.109.0",
    "flake8==7.0.0",
    "gunicorn>=25.0.3",
    "httpx==0.26.0",
    "ipython>=9.10.0",
    "jinja2==3.1.3",
    "langchain==0.3.6",
    "langchain-community==0.3.4",
    "langchain-core<0.4.0",
    "langchain-neo4j==0.1.0",
    "langchain-openai==0.2.14",
    "langgraph==0.2.60",
    "langgraph-checkpoint==2.0.26",
    "langgraph-checkpoint-redis==0.0.7",
    "lightrag-hku>=0.0.3",
    "loguru==0.7.2",
    "lxml==5.1.0",
    "matplotlib>=3.10.8",
    "mypy==1.8.0",
    "neo4j==5.28.1",
    "numpy<2.0.0",
    "openai==1.97.0",
    "pandas==2.3.1",
    "pathlib2==2.3.6",
    "pillow>=12.1.0",
    "pip>=26.0.1",
    "playwright==1.40.0",
    "pre-commit==3.6.0",
    "prometheus-client==0.19.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.4.0",
    "pymilvus==2.3.7",
    "pymysql==1.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "rank-bm25>=0.2.2",
    "redis>=5.2.1,<6.0.0",
    "requests==2.31.0",
    "scikit-learn==1.4.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0,<81.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "uvicorn[standard]==0.27.0",
    "mem0ai>=0.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
